# fh6-telemetry-cpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
platform/linux/: fh6-telemetry.desktop
src/: data_util.hpp  exec_util.cpp  exec_util.hpp  main.cpp  telemetry_packet.hpp  telemetry_server.hpp  util.hpp
src/server/: telemetry_packet.hpp  telemetry_server.hpp  triple_buffer.hpp
src/ui/: ui.cpp  ui.hpp  ui_config.hpp  ui_theme.hpp  ui_util.hpp  widgets.cpp  widgets.hpp
